--- a/embc-app/ClientApp/src/styles/components/form-elements.scss
+++ b/embc-app/ClientApp/src/styles/components/form-elements.scss
@@ -13,9 +13,10 @@
 
   &-check {
     input {
-      margin: 0;
+      // margin: 0;
+      margin-top: 2px;
       margin-left: -1.25rem;
-      vertical-align: middle;
+      // vertical-align: middle;
     }
     &-label {
       padding-left: 5px;
@@ -57,7 +58,7 @@
   span {
     position: absolute;
     left: 15px;
-    top: 1px;
+    top: 0.5rem;
     padding: 1px 5px;
     font-size: 20px;
     color: #6b6b6b;
