--- a/embc-app/ClientApp/src/styles/components/spinner.scss
+++ b/embc-app/ClientApp/src/styles/components/spinner.scss
@@ -47,10 +47,10 @@
     display: inline-block;
     background-image: url(./assets/spinner.png);
     background-size: 100%;
-    width: 2rem;
-    height: 2rem;
+    width: 18px;
+    height: 18px;
     top: 5px;
     margin-top: -3px;
-    margin-right: 5px;
+    margin-right: 10px;
   }
 }
