--- a/embc-app/ClientApp/src/styles/components/summary.scss
+++ b/embc-app/ClientApp/src/styles/components/summary.scss
@@ -109,7 +109,7 @@
 span.fixed-size {
   font-family: 'LiberationMono', monospace;
   font-size: 14px;
-  line-height: 2rem;
+  line-height: 20px;
   white-space: pre-wrap;
   word-break: break-all;
   padding: 0.5rem 1rem;
